# base-python-lib-template

./: .flake8  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
tests/: test_eduardohl_base_python_lib_template.py
