[tool.poetry]
name = "base-python-lib-template"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0"
pre-commit = "^2.20"

[tool.autoflake]
check= true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
realpython = "base_python_lib_template.__main__:main"
